# pdf_discovery

./: FDD_Fields.xlsx  Technical Proposal - June 2025.pptx  config.yaml  main.py  pyproject.toml
code/: mess3.py  mess5.py  mess_image_conv.py  split_train_test.py  test_yolo_single_image.py  train_yolo_model.py
data/test/labels/: arbys-2022-fdd-100.txt  arbys-2022-fdd-111.txt  arbys-2022-fdd-144.txt  arbys-2022-fdd-147.txt  arbys-2022-fdd-168.txt  arbys-2022-fdd-169.txt  arbys-2022-fdd-193.txt  arbys-2022-fdd-228.txt  arbys-2022-fdd-39.txt  arbys-2022-fdd-48.txt  arbys-2022-fdd-63.txt  arbys-2022-fdd-76.txt  arbys-2022-fdd-78.txt  arbys-2022-fdd-86.txt  arbys-2022-fdd-91.txt  jazzercise-2022-fdd-266.txt  jazzercise-2022-fdd-270.txt  jazzercise-2022-fdd-272.txt  jazzercise-2022-fdd-274.txt  jazzercise-2022-fdd-275.txt  jazzercise-2022-fdd-281.txt  jazzercise-2022-fdd-284.txt  jazzercise-2022-fdd-66.txt  jazzercise-2022-fdd-83.txt  kumon-2022-fdd-143.txt  kumon-2022-fdd-17.txt  kumon-2022-fdd-170.txt  kumon-2022-fdd-174.txt  kumon-2022-fdd-175.txt  kumon-2022-fdd-177.txt  kumon-2022-fdd-183.txt  kumon-2022-fdd-187.txt  kumon-2022-fdd-190.txt  kumon-2022-fdd-22.txt  kumon-2022-fdd-61.txt  kumon-2022-fdd-64.txt
data/train/: labels.cache
data/train/labels/: arbys-2022-fdd-101.txt  arbys-2022-fdd-103.txt  arbys-2022-fdd-104.txt  arbys-2022-fdd-105.txt  arbys-2022-fdd-106.txt  arbys-2022-fdd-107.txt  arbys-2022-fdd-108.txt  arbys-2022-fdd-109.txt  arbys-2022-fdd-110.txt  arbys-2022-fdd-112.txt  arbys-2022-fdd-114.txt  arbys-2022-fdd-115.txt  (+159 more)
data/val/: labels.cache
(+29 files in other folders)
